Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-23433

Other way to present Breakpoints and CLANG errors.

XMLWordPrintable

    • 7792d82bd9fc397532c6da5444c455e5e0fd442a (qt-creator/qt-creator/master)

      User has reported following:

      Breakpoints and CLANG errors are both shown with red lines in the scrollbar.

      This is confusing.

      When you are writing code and see red lines it does not necessarily mean there are syntax/semantic errors. It might mean that you have breakpoints.

      Either use different code OR only show them when de 'debug' mode is active?

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            davschul David Schulz
            tero.pelkonen Tero Pelkonen
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes