Debugger: Do not highlight global breakpoints in scrollbar

The color red is perceived as an error indicator. So only highlight
breakpoints if they have been assigned to an engine to reduce the visual
distraction.

Fixes: QTCREATORBUG-23433
Change-Id: I852d94a7637c958c65c94acacc8233b6553bb612
Reviewed-by: hjk <hjk@qt.io>